--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <p> Dean's Message Information On behalf of faculty members and staff of the College of Science and Technology I would like to welcome you to the College of Science and Technology at The University of Cambodia.
 The College of Science and Technology (CoST) was established at the same time as the The University of Cambodia in 2013.B</p>
 <h2 style="Background-color:darkblue; color:white; border:2px solid green; font-family: Alfredo Heavy; text-align:center;">បន្ទប់អនុវត្ត-Computer Labs</h2>
-<img src="A1.jpg" width="300" height=200">
-<img src="A2.jpg" width=300" height=200">
-<img src="A3.jpg" width=300" height=200"><br>
+<img src="pic2.jpg" width="300" height=200">
+<img src="pic3.jpg" width=300" height=200">
+<img src="pic4.jpg" width=300" height=200"><br>
 
 </body>
 <footer>
